src/style.css
@font-face {
  font-family: 'MajorMonoDisplay-Regular';
  src: url('fonts/MajorMonoDisplay-Regular.woff2') format('woff2'),
       url('fonts/MajorMonoDisplay-Regular.woff') format('woff'),
       url('fonts/RobotoMono-Light.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

body, html {
  margin: 0;
  padding: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
  cursor: url('/dot_large.svg') 16 16, auto;
}
#play-button {
  position: absolute;
  top: 75%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 15px 50px;
  font-size: 24px;
  font-family: 'RobotoMono-Light', sans-serif;
  color: white;
  background: transparent;
  border: 3px solid white;
  letter-spacing: 2px;
  z-index: 10;
  outline: none;
  cursor: url('/dot_large.svg') 16 16, pointer;
  
}

#play-button:hover {
  animation: glowing 5s infinite alternate;
}

canvas {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 1; 
}
@keyframes glowing {
  0% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); }
  50% { box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); }
  100% { box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); }
}
#credits {
  position: absolute;
  bottom: 20px;
  left: 10px;
  font-family: 'RobotoMono-Light', sans-serif;
  font-size: 20px;
  color: white;
  opacity: 0.7;
  user-select: none;
  z-index: 10;
}

#credits:hover {
  opacity: 1;
}

#credits a {
  text-decoration: none;
  color: inherit;
  cursor: url('/dot_large.svg') 16 16, auto;
}

